# cpp-build-my-3rdparty

./: CMakeLists.txt  README.md
include/: foo.h
my3rdparty/include/: cls.h
my3rdparty/src/: cls.cpp
src/: foo.cpp  main.cpp
